--- a/sf-in-progress/www/assets/css/in-progress.css
+++ b/sf-in-progress/www/assets/css/in-progress.css
@@ -1,16 +1,13 @@
 
-
-body {
+body, html  {
     width: 100%;
     height: 100%;
+    min-height: 100%;
     font-family:sans-serif;
+    background-color: transparent;
     color:black;
 }
 
-html {
-    width: 100%;
-    height: 100%;
-}
 
 section{
     width:100%;
@@ -28,6 +25,34 @@ a:focus {
     text-decoration: none;
     color: #1d9b6c;
 }
+
+
+/*
+ * Remove the gap between images and the bottom of their containers: h5bp.com/i/440
+ */
+
+img {
+    vertical-align: middle;
+}
+
+/*
+ * Remove default fieldset styles.
+ */
+
+fieldset {
+    border: 0;
+    margin: 0;
+    padding: 0;
+}
+
+/*
+ * Allow only vertical resizing of textareas.
+ */
+
+textarea {
+    resize: vertical;
+}
+
 
 /******************************************************************************NAVBAR*/
 .navbar-custom {
@@ -92,7 +117,7 @@ a:focus {
     color: #fff;
 }
 
-span#logo.large{
+/*span#logo.large{
     font-size: 30px;
     font-weight: 500;
     letter-spacing: 2px;
@@ -100,10 +125,10 @@ span#logo.large{
     padding-bottom: 10px;
     border-bottom: 2px solid white;
 
-}
+}*/
 
-
-@media(max-width:993px){
+/****************************ADD REAL LOGO AND GET RID OF THIS QUERY*/
+/*@media(max-width:993px){
     span#logo.large{
         font-size:17px;
         font-weight: 800;
@@ -111,8 +136,8 @@ span#logo.large{
 
     }
 
-}
-
+}*/
+/************************************************************/
 
 @media(min-width:768px) {
     .navbar-custom {
@@ -135,31 +160,21 @@ span#logo.large{
 
 
 /******************************************************************PARRALLAX-STORY*/
-.hsContainer {
-    display: table;
-    table-layout: fixed;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    position: relative;
-    opacity: 0;
-}
-.hsContent {
-    max-width: 450px;
-    margin: -150px auto 0 auto;
-    display: table-cell;
-    vertical-align: middle;
-    color: black;
-    padding: 0 8%;
-    text-align: center
+h2{
+    margin-top:300px;
+    color:red;
 }
 
-.hsContent>h2{
-    color:black;
-    background-color: red;
 
+section {
+    /*min-width: 960px;*/
+    -webkit-transition: opacity 300ms ease-out;
+    -moz-transition: opacity 300ms ease-out;
+    transition: opacity 300ms ease-out;
 }
-
+main {
+    overflow-x: hidden;
+}
 
 .bcg {
     background-position: center center;
@@ -168,17 +183,85 @@ span#logo.large{
     background-size: cover;
     height: 100%;
     width: 100%;
+    /*max-width: 100%;
+    height:auto;*/
+}
+.hsContainer {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    position: relative;
 }
 
+.hsContent {
+    max-width: 700px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+}
+    .hsContent h2  {
+        color: #fff8de;
+        background-color: rgba(0,0,0,0.5);
+        padding: 10px 5px;
+        font-size: 35px;
+        line-height: 38px;
+        margin-bottom: 12px;
+    }
+    .hsContent p {
+        width: 400px;
+        color: #b2b2b2;
+    }
+    .hsContent a {
+        color: #b2b2b2;
+        text-decoration: underline;
+    }
 
-#slide-1 .bcg{
-    background-image: url("../img/GG_Nice.jpg");
-
+/* Slide 1 */
+#slide-1 .bcg {background-image:url('../img/bcg_slide-1.jpg')}
+#slide-1 .hsContent {
+    bottom: 200px;
+    top: auto;
 }
 
+/* Slide 2 */
+#slide-2 .bcg {background-image:url('../img/bcg_slide-2.jpg')}
+#slide-2 .hsContent {
+    margin-left: -450px;
+    bottom: 200px;
+    top: auto;
+}
+
+/* Slide 3 */
+#slide-3 .bcg {background-image:url('../img/bcg_slide-3.jpg')}
+#slide-3 .hsContent {
+    margin-left: -239px;
+}
+    #slide-3 h2 {
+        color: #f2ead6;
+        background-color: rgba(0,0,0,0.6);
+    }
+
+/* Slide 4 */
+#slide-4 .bcg {background-image:url('../img/bcg_slide-4.jpg')}
+#slide-4 .hsContent {
+    margin-left: -450px;
+}
+    #slide-4 h2 {
+        background: none;
+        padding-left: 0;
+        padding-right: 0;
+    }
+
+
+@media(min-width:768px) {
 
 
 
+
+
+
+
+}
 
 
 
